--- a/index.html
+++ b/index.html
@@ -121,6 +121,16 @@
     }
   </script>
 
+  <!-- Wellness Tip Audio -->
+<section class="audio-tip">
+  <h2>Listen to a Wellness Tip 🎧</h2>
+  <audio controls>
+    <source src="audio/audio1.m4a" type="audio/mp4">
+    Your browser does not support the audio element.
+  </audio>
+</section>
+
+
   <!-- Footer -->
   <footer>
     <p>© 2025 Stronger by the Plate</p>
