--- a/contact.html
+++ b/contact.html
@@ -30,14 +30,30 @@
     <h2>Contact Us</h2>
     <p>We’d love to hear from you! Use the form below to get in touch with questions, feedback, or collaboration ideas.</p>
 
-    <!-- Simple Contact Form -->
-    <form class="contact-form">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </main>
+   <!-- Enhanced Contact + Wellness Form -->
+<form class="contact-form">
+  <h3>Share Your Wellness Goals 🌿</h3>
+
+  <!-- Text Input -->
+  <label for="name">Your Name:</label>
+  <input type="text" id="name" name="name" placeholder="Enter your name" required>
+
+  <!-- Radio Buttons -->
+  <p>How would you describe your activity level?</p>
+  <label><input type="radio" name="activity" value="beginner" required> Beginner</label>
+  <label><input type="radio" name="activity" value="intermediate"> Intermediate</label>
+  <label><input type="radio" name="activity" value="advanced"> Advanced</label>
+
+  <!-- Checkboxes -->
+  <p>Which wellness goals are you most focused on?</p>
+  <label><input type="checkbox" name="goal" value="nutrition"> Improve Nutrition</label>
+  <label><input type="checkbox" name="goal" value="fitness"> Increase Fitness</label>
+  <label><input type="checkbox" name="goal" value="mindfulness"> Practice Mindfulness</label>
+
+  <!-- Submit Button -->
+  <button type="submit">Submit My Goals</button>
+</form>
+
 
   <!-- Footer -->
   <footer>
