added flexbox css module 7 assignment

--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
       <p>Discover how food, movement, and community can help you live a longer, healthier life — inspired by the world's Blue Zones.</p>
     </div>
   </section>
+  
+  <section class="mission-flex">
+  <div class="mission-item">
+    <h3>Eat Well</h3>
+    <p>Learn simple, plant-forward recipes that fuel your day.</p>
+  </div>
+  <div class="mission-item">
+    <h3>Move Often</h3>
+    <p>Stay active with easy, at-home workouts and daily routines.</p>
+  </div>
+  <div class="mission-item">
+    <h3>Connect More</h3>
+    <p>Discover how community and social bonds boost longevity.</p>
+  </div>
+</section>
+
 
   <!-- Mission Section -->
   <main>
