--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
   <h3>Meet Our User Persona</h3>
   <div class="persona-box">
     <!-- Image -->
-    <img src="images/maria_userpersona.jpg" alt="Maria Gomez - User Persona" class="persona-img">
+    <img src="images/userpersona.jpg" alt="Maria Gomez - User Persona" class="persona-img">
 
     <!-- Info -->
     <div class="persona-info">
